# jar-of-pickles

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: ArpuChart.tsx  CustomerChart.tsx  MrrChart.tsx  PlanBreakdown.tsx  SummaryCards.tsx
docs/: step1-data-gen.md  step2-etl.md  step3-sql.md  step4-dashboard.md
etl/: extract_load.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArpuChart.tsx  CustomerChart.tsx  CustomersByPlan.tsx  MrrChart.tsx  PlanBreakdown.tsx  SummaryCards.tsx
scripts/: generate_data.py  seed_prices.py  validate_mrr.py
sql/: arpu_view.sql  mrr_by_plan_view.sql  mrr_view.sql  schema.sql
tests/: test_api.py  test_snapshots.py
